--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
+    "sequelize-cli": "^6.6.2",
     "supertest": "^6.2.2",
     "ts-node": "^10.6.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
+    "dev": "nodemon src/modules/infrastructure/api/server.ts",
     "test": "npm run tsc -- --noEmit && jest",
     "tsc": "tsc"
   },
@@ -21,9 +23,9 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jstoxml": "^3.2.3",
-    "nodemon": "^2.0.15",
+    "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.17.0",
+    "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
     "uuid": "^8.3.2",
