--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "sequelize-cli": "^6.6.2",
     "supertest": "^6.2.2",
     "ts-node": "^10.6.0",
-    "typescript": "^4.5.5"
+    "typescript": "^5.2.0"
   },
   "scripts": {
     "dev": "nodemon src/modules/infrastructure/api/server.ts",
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "migrate": "node -r ts-node/register/transpile-only ./src/migrations/config/migrator-cli.ts"
   },
+  "keywords": [
+    "Migrations",
+    "Umzug"
+  ],
   "dependencies": {
     "@types/express": "^4.17.21",
     "dotenv": "^16.5.0",
@@ -28,6 +33,7 @@
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
+    "umzug": "^3.8.2",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   }
